tests/toylang/neg/000262_mutation.toylang
program a = { do a : bool; } .
